# adi_clock

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO
docs/: clock.html  home.html  index.html  timer.html  title.html
examples/: demo.rs  timer.rs
src/: clock.rs  lib.rs  pulse.rs  timer.rs
