[package]
name = "adi_clock"
version = "0.2.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.tech>"]
description = """
        The adi_clock library enables the programmer to control the CPU's \
        Real-Time-Clock (RTC) and High Precision Event Timer (HPET). With \
	this, one can time operations, get the time (TODO), sleep with \
	precision, and animate smoothly.
"""
keywords = [ "animation", "date", "clock", "timer", "hardware" ]
categories = [
	"date-and-time", "hardware-support", "multimedia::audio",
	"multimedia::video"
]
license = "MIT"
documentation = "http://plopgrizzly.tech/adi_clock/"
homepage = "http://plopgrizzly.tech/adi_clock/"
repository = "https://github.com/plopgrizzly/adi_clock/"
readme = "README.md"
exclude = [ "examples/*", "docs/*", ".gitignore", "TODO" ]

[dependencies]
